PATCH_ERROR.txt
Traceback (most recent call last):
  File "<stdin>", line 8, in <module>
  File ".github/workflows/kanarek-favorites-widget-bootstrap.yml", line 1
    name: Kanarek favorites widget bootstrap
             ^
IndentationError: unexpected indent
